mes premiers tests

--- a/app/views/pages/menu.html.erb
+++ b/app/views/pages/menu.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#menu</h1>
-<p>Find me in app/views/pages/menu.html.erb</p>
+<h1><%=@titre%></h1>
+<p>je suis le menu !!!</p>
+<%= link_to 'lien', "http://trescourt.com" %>
