Ajout des régions et départements avec leur lien

--- a/app/views/utilisateurs/index.html.erb
+++ b/app/views/utilisateurs/index.html.erb
@@ -18,6 +18,11 @@
     <td><%= link_to 'Destroy', utilisateur, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
+<% Region.all.each do |reg| %>
+  <tr>
+    <td><%= reg.nom %></td>
+  </tr>
+<% end %>
 </table>
 
 <br />
